<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:background="#E7F3E9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <!-- HEADER -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/helo_dashboard"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/kelas"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/profile_user"
                android:onClick="openProfile"/>
        </LinearLayout>

    </LinearLayout>

    <!-- GARIS -->
    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/green_primary"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TANGGAL -->
    <TextView
        android:id="@+id/tvTanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"

        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- CONTAINER UJIAN -->
    <LinearLayout
        android:id="@+id/containerUjian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/bg_white_rounded"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        app:layout_constraintTop_toBottomOf="@id/tvTanggal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ujian_aktif"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"/>

        <!-- Card contoh -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/bg_card"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mata_pelajaran_mtk"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingBottom="7dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/durasi_mtk"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:paddingBottom="6dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/status_mtk"
                android:textSize="13sp"
                android:textColor="@color/black"/>

            <Button
                android:text="Mulai"
                android:textStyle="bold"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_primary"
                android:layout_gravity="end"
                android:onClick="openExam"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/bg_card"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mata_pelajaran_mtk"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingBottom="7dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/durasi_mtk"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:paddingBottom="6dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/status_mtk"
                android:textSize="13sp"
                android:textColor="@color/black"/>

            <Button
                android:text="Selesai"
                android:textStyle="bold"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:layout_gravity="end"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_green_rounded_bottom"
        android:padding="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="openDashboard">


            <ImageView
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:src="@drawable/ic_dashboard"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dashboard"
                android:textColor="#FFFFFF"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="openResult">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:src="@drawable/ic_result"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/result"
                android:textColor="#FFFFFF"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>